--- a/frontend/templates/forgot_password.html
+++ b/frontend/templates/forgot_password.html
@@ -17,7 +17,7 @@
 
                         <div id="msg"></div>
 
-                        <form id="forgotForm" method="POST" action="/api/forgot-password">
+                        <form id="forgotForm" action="/forgot-password">
                             <div class="mb-3">
                                 <label for="username">Username</label>
                                 <input type="text" id="username" class="form-control" required>
