--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -17,7 +17,7 @@
 
                         <div id="msg"></div>
 
-                        <form id="loginForm" method="POST" action="/api/login">
+                        <form id="loginForm" action="/login">
                             <div class="mb-3">
                                 <label for="username">Username</label>
                                 <input type="text" id="username" class="form-control" required>
